frontprestationmf/deployment-fp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fp
  labels:
    app: fp
    type: front
spec:
  selector:
    matchLabels:
      app: fp
      type: front
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fp    
        type: front
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode2
      imagePullSecrets:
       - name: regcred
      containers:
        - name: fp
          image: 192.168.2.19:5000/frontprestation:1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW      
          resources:
            requests:
              memory: "3096Mi"
              cpu: "400m"
            limits:
              memory: "8Gi"
              cpu: "3"      
              #---------------------------------#
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
