frontprestationmf/service-fp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-fp 
spec:
  selector:
    app: fp
    type: front
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
      name: http-front
      nodePort: 31109
