frontprestationmf/virtualServiceFP.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fpvs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - name: fp-vs
    match:
    - uri:
        prefix: "/#/front-prestation"     
    route:
    - destination:
        host: service-ff 
        port:
          number: 80
